update apache conf to use newmediacaucus.org

--- a/default.prod.conf
+++ b/default.prod.conf
@@ -28,8 +28,8 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/nmcdev.shimmeringtrashpile.com/privkey.pem
+    SSLCertificateFile /etc/letsencrypt/live/newmediacaucus.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/newmediacaucus.org/privkey.pem
     
     # SSL/TLS settings
     SSLProtocol all -SSLv2 -SSLv3
