setup rewrites to send www to non-www

--- a/default.prod.conf
+++ b/default.prod.conf
@@ -2,7 +2,8 @@
 SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
 
 <VirtualHost *:80>
-    ServerName yourdomain.com
+    ServerName newmediacaucus.org
+    ServerAlias www.newmediacaucus.org
     DocumentRoot "/var/www/html"
     <Directory "/var/www/html">
         AllowOverride All
@@ -15,16 +16,16 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
         Require all granted
     </Directory>
 
-    RewriteEngine on
-    RewriteCond %{HTTP_HOST} !=localhost
-    RewriteCond %{HTTP_HOST} ^www\. [NC,OR]
-    RewriteCond %{HTTPS} off
-    RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
-    RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
+    # Redirect www to non-www
+    RewriteEngine On
+    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L,NE]
 
 </VirtualHost>
 
 <VirtualHost *:443>
+    ServerName newmediacaucus.org
+    ServerAlias www.newmediacaucus.org
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
     SSLEngine on
@@ -43,4 +44,9 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
         AllowOverride All
         Require all granted
     </Directory>
+
+    # Redirect www to non-www (HTTPS)
+    RewriteEngine On
+    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
 </VirtualHost>
