--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,13 +23,20 @@ services:
       - webnet
 
   certbot:
-    image: certbot/certbot
+    build:
+      context: .
+      dockerfile: Dockerfile.certbot
+    image: nmc-website-certbot
     container_name: certbot
     user: root
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
       - ./letsencrypt-logs:/var/log/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --force-renewal --config-dir /etc/letsencrypt --logs-dir /var/log/letsencrypt;  docker exec nmc-website-prod-container apachectl -k graceful; sleep 12h & wait $${!}; done;'"
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - DOMAIN=newmediacaucus.org
+      - EMAIL=admin@newmediacaucus.org
+    restart: unless-stopped
     networks:
       - webnet
 
