--- a/default.prod.conf
+++ b/default.prod.conf
@@ -11,9 +11,17 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
     </Directory>
 
     <Directory "/var/www/html/.well-known/acme-challenge/">
-        Options None
+        Options FollowSymLinks
         AllowOverride None
         Require all granted
+        Satisfy Any
+    </Directory>
+
+    <Directory "/var/www/html/.well-known/">
+        Options FollowSymLinks
+        AllowOverride None
+        Require all granted
+        Satisfy Any
     </Directory>
 
     # Redirect www to non-www
@@ -29,8 +37,8 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/newmediacaucus.org-0001/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/newmediacaucus.org-0001/privkey.pem
+    SSLCertificateFile /etc/letsencrypt/live/newmediacaucus.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/newmediacaucus.org/privkey.pem
     
     # SSL/TLS settings
     SSLProtocol all -SSLv2 -SSLv3
@@ -43,6 +51,20 @@ SSLStaplingCache "shmcb:/var/run/ocsp(128000)"
     <Directory /var/www/html>
         AllowOverride All
         Require all granted
+    </Directory>
+
+    <Directory "/var/www/html/.well-known/acme-challenge/">
+        Options FollowSymLinks
+        AllowOverride None
+        Require all granted
+        Satisfy Any
+    </Directory>
+
+    <Directory "/var/www/html/.well-known/">
+        Options FollowSymLinks
+        AllowOverride None
+        Require all granted
+        Satisfy Any
     </Directory>
 
     # Redirect www to non-www (HTTPS)
