--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
 
     - name: Pull latest changes and deploy
       run: |
-        ssh -o StrictHostKeyChecking=no nmcdev@nmcdev.shimmeringtrashpile.com 'cd /home/nmcdev/nmc-website && git pull origin main && sudo docker compose -f docker-compose.prod.yml down && sudo docker compose -f docker-compose.prod.yml up -d --build'
+        ssh -o StrictHostKeyChecking=no nmcdev@nmcdev.shimmeringtrashpile.com 'cd /home/nmcdev/nmc-website && git pull origin main && docker compose -f docker-compose.prod.yml down && docker compose -f docker-compose.prod.yml up -d --build'
