--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,10 @@
 # http://yourdomain.com/about-us/team
 RewriteEngine on
 
+# Redirect dev domain to production domain while preserving the path
+RewriteCond %{HTTP_HOST} ^(www\.)?nmcdev\.shimmeringtrashpile\.com$ [NC]
+RewriteRule ^(.*)$ https://newmediacaucus.org/$1 [R=301,L]
+
 # make sure to set the RewriteBase correctly
 # if you are running the site in a subfolder;
 # otherwise links or the entire site will break.
